--- a/AUTHORS
+++ b/AUTHORS
@@ -1,3 +1,4 @@
 # This file lists all individuals having contributed content to the repository.
 
-dancoon <dancun.ian@students.jkuat.ac.ke>
+Ephraim <ephraimshikanga@gmail.com>
+Joan_kinoti <kinotijoan@gmail.com>
